--- a/.github/workflows/install_and_run.yml
+++ b/.github/workflows/install_and_run.yml
@@ -29,4 +29,4 @@ jobs:
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
-        python cli/main.py create-swarm-agent "${{ github.event.inputs.description }}" --output print
+        python cli/main.py create-swarm-agent "${{ github.event.inputs.description }}"
