--- a/.github/workflows/create_prompt.yml
+++ b/.github/workflows/create_prompt.yml
@@ -1,4 +1,4 @@
-name: Generate Prompt
+name: Create Prompt
 
 on:
   workflow_dispatch:
@@ -13,12 +13,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: '3.13' 
 
       - name: Install dependencies
         run: |
@@ -28,4 +28,4 @@ jobs:
         env:
             OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
-          python cli/main.py create-prompt "${{ github.event.inputs.task }}"
+          python ./main.py create-prompt "${{ github.event.inputs.task }}"
